tests/snapshots/examples_fixtures/namespaces__namespace_alias_ok.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/namespaces/namespace_alias_ok.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `Modules.Data.MyFile` to import.

  examples/namespaces/namespace_alias_ok.flx:4:1
  |
4 | import Modules.Data.MyFile as MyFile
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Modules.Data.MyFile.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Modules.Data.MyFile` under roots: examples/namespaces, src, lib (imported from examples/namespaces/namespace_alias_ok.flx).
== stdout ==
<not executed>
